# jftt-compiler

./: .gitignore  CMakeLists.txt  Makefile  example.imp  example.sil  notes.md  optimizations.txt  tac_old.hpp  test.bash
mw2025/: lexer.cc  parser.cc  parser.hh
src/: compiler.hpp  lexer.l  main.cpp  operator.hpp  parser.y  parser_wrapper.cpp  parser_wrapper.hpp  register.hpp  symbol_table.hpp  types.hpp  util.hpp
src/analyzer/: ast_visitor.cpp  ast_visitor.hpp  declaration_checker.hpp  procedure_checker.hpp  recursive_call_checker.hpp  semantic_error.hpp  type_checker.hpp
src/asm/: asm.hpp  asm_generator.hpp
src/ast/: asm.hpp  ast.hpp  lang.hpp  tac.hpp  visitor.cpp  visitor.hpp
src/optimizer/: asm_optimizer.hpp  optimizer.hpp  tac_optimizer.hpp
src/parser/: parser.y  parser_wrapper.cpp  parser_wrapper.hpp
src/tac/: tac.hpp  tac_generator.hpp
test/: add_test.cpp  array_test.cpp  compiler_test.hpp  decl_checker_test.cpp  div_test.cpp  for_test.cpp  if_test.cpp  main.cpp  mod_test.cpp  mul_test.cpp  proc_checker_test.cpp  procedure_test.cpp  public_examples.hpp  public_examples_test.cpp  repeat_test.cpp  sub_test.cpp  test_printer.hpp  var_test.cpp  while_test.cpp  write_test.cpp
tests/stage_1/: lot_newlines.sil  no_newlines.sil  tabs.sil  write_0.sil  write_100.sil
tests/stage_2/: add.sil  sub.sil  sub_lt_zero.sil
tests/stage_3/: mult1.sil  read.sil  var_1.sil
testy2025/: example8.imp
